; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_stubmanager.c_stub_manager_is_table_marshaled.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_stubmanager.c_stub_manager_is_table_marshaled.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stub_manager = type { i32 }
%struct.ifstub = type { i32 }

@MSHLFLAGS_TABLESTRONG = common dso_local global i32 0, align 4
@MSHLFLAGS_TABLEWEAK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stub_manager_is_table_marshaled(%struct.stub_manager* %0, i32* %1) #0 {
  %3 = alloca %struct.stub_manager*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.ifstub*, align 8
  store %struct.stub_manager* %0, %struct.stub_manager** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.stub_manager*, %struct.stub_manager** %3, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call %struct.ifstub* @stub_manager_ipid_to_ifstub(%struct.stub_manager* %6, i32* %7)
  store %struct.ifstub* %8, %struct.ifstub** %5, align 8
  %9 = load %struct.ifstub*, %struct.ifstub** %5, align 8
  %10 = call i32 @assert(%struct.ifstub* %9)
  %11 = load %struct.ifstub*, %struct.ifstub** %5, align 8
  %12 = getelementptr inbounds %struct.ifstub, %struct.ifstub* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @MSHLFLAGS_TABLESTRONG, align 4
  %15 = load i32, i32* @MSHLFLAGS_TABLEWEAK, align 4
  %16 = or i32 %14, %15
  %17 = and i32 %13, %16
  ret i32 %17
}

declare dso_local %struct.ifstub* @stub_manager_ipid_to_ifstub(%struct.stub_manager*, i32*) #1

declare dso_local i32 @assert(%struct.ifstub*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
